# Victor

./: .gitignore  README.md  pyproject.toml
croc/: __init__.py  conversation.py  mm_utils.py  utils.py
croc/model/: __init__.py  apply_delta.py  builder.py  consolidate.py  croc_arch.py  make_delta.py  utils.py
croc/model/language_model/: croc_llama.py
croc/train/: croc_callback.py  croc_trainer.py  train.py  train_croc.py  train_mem.py
llava/: mm_utils.py
llava/model/: __init__.py  builder.py  llava_arch.py
llava/model/language_model/: llava_llama.py  llava_qwen.py
llava/model/multimodal_encoder/: builder.py  clip_encoder.py  qwen2_5_encoder.py  siglip_encoder.py
llava/train/: llava_trainer.py  train.py  train_mem.py
scripts/: finetune.sh  pretrain_croc.sh  pretrain_mlp.sh  zero2.json
scripts/archived/: entry_cmd.sh
scripts/train/: stage1.5_caption_clip_qwen_victor.sh  stage1.5_caption_siglip_qwen_victor.sh  stage1_pretrain_clip.sh  stage1_pretrain_siglip.sh  stage2_finetune_clip_qwen.sh  stage2_finetune_siglip_qwen.sh
